--- a/esquel.html
+++ b/esquel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="iso-8859-1">
+<meta charset="utf-8">
 <meta name="description" content="Ejemplo de HTML5">
 <meta name="keywords" content="HTML5, CSS3, JavaScript">
 <title>Este texto es el título del documento</title>
