Se modifica el fichero esquel.html para ver si funciona la integración.

--- a/esquel.html
+++ b/esquel.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+<!-- Comentario para probar git -->
 <h1>Este es el título principal del sitio web</h1>
 </header>
 <nav>
