--- a/esquel.html
+++ b/esquel.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Ejemplo de HTML5">
   <meta name="keywords" content="HTML5, CSS3, JavaScript">
   <title>Este texto es el título del documento</title>
-  <link rel="stylesheet" href="miblog.css">
+  <link rel="stylesheet" href="misestilos.css">
 </head>
 <body>
   <div id="agrupar">
